--- a/FiorellaProject/Html/home.html
+++ b/FiorellaProject/Html/home.html
@@ -566,6 +566,275 @@
                 </div>
 
         </section>
+        <section id="video">
+            <div class="container">
+                <div class="row">
+                    <div class="video-article d-flex justify-content-aroundcol-lg-12">
+                        <div class="videoImg col-lg-7">
+                            <div class="icon">
+                                <i class="fas fa-play-circle"></i>
+                            </div>
+                            <img src="../assets/images/h3-video-img.jpg" alt="">
+                        </div>
+                        <div class="article col-lg-5">
+                            <div class="title">
+                                <h5>
+                                    Suprise Your <span>Valentine!</span> <br>
+                                    Let us arrange a smile.</h5>
+                            </div>
+                            <div class="desc">
+                                Where flowers are our inspiration to create lasting memories. Whatever the occasion...
+                            </div>
+                            <div class="list">
+                                <ul>
+                                    <li>
+                                        <span><img src="../assets/images/h1-custom-icon.png" alt=""></span> <span>Hand
+                                            picked just for you.</span>
+                                    </li>
+                                    <li>
+                                        <span><img src="../assets/images/h1-custom-icon.png" alt=""></span> <span>Unique
+                                            flower arrangements</span>
+                                    </li>
+                                    <li>
+                                        <span><img src="../assets/images/h1-custom-icon.png" alt=""></span> <span>Best
+                                            way to say you care.</span>
+                                    </li>
+                                </ul>
+                            </div>
+
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="flowerExpert">
+            <div class="container">
+                <div class="row">
+                    <div class="info-experts col-lg-12 col-md-12 col-sm-12">
+                        <div class="info col-sm-12 col-md-12">
+                            <div class="title">
+                                <h2>Flower Experts</h2>
+                            </div>
+                            <div class="desc">A perfect blend of creativity, energy, communication, happiness and love.
+                                Let us <br> arrange a smile for you.</div>
+                        </div>
+                        <div class="experts  col-lg-12 d-flex justify-content-between">
+                            <div class="expert col-lg-3 col-sm-12 col-md-6 ">
+                                <div class="expImage"><img src="../assets/images/expert1.png" alt=""></div>
+                                <div class="expName">CRYSTAL BROOKS</div>
+                                <div class="expProfession">Florist</div>
+                            </div>
+                            <div class="expert col-lg-3 col-sm-12 col-md-6 ">
+                                <div class="expImage"><img src="../assets/images/expert2.png" alt=""></div>
+                                <div class="expName">SHIRLEY HARRIS</div>
+                                <div class="expProfession">Manager</div>
+                            </div>
+                            <div class="expert col-lg-3 col-sm-12 col-md-6">
+                                <div class="expImage"><img src="../assets/images/expert3.png" alt=""></div>
+                                <div class="expName">BEVERLY CLARK</div>
+                                <div class="expProfession">Florist</div>
+                            </div>
+                            <div class="expert col-lg-3 col-sm-12 col-md-6 ">
+                                <div class="expImage"><img src="../assets/images/expert4.png" alt=""></div>
+                                <div class="expName">AMANDA WATKINS</div>
+                                <div class="expProfession">Florist</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section  id="myParallax">
+            <div class="parallaxClass parallax-window d-flex justify-content-center align-items-center flex-column "
+                data-parallax="scroll" data-image-src="../assets/images/parallaxImg.jpg">
+                <div class="parallaxText">
+                    <h2>Join The Colorful Bunch!</h2>
+                </div>
+                <div class="registration d-flex ">
+                    <label for=""></label>
+                    <input type="email" placeholder="Email Address">
+                    <button type="reset">SUBSCRIBE</button>
+                </div>
+            </div>
+
+        </section>
+        <section id="blog">
+            <div class="container">
+                <div class="row">
+                    <div class="blogArticle text-center">
+                        <div class="blogTitle">
+                            <h2>From our Blog</h2>
+                        </div>
+                        <div class="blogDesc">
+                            <p>A perfect blend of creativity, energy, communication, happiness and love. Let us <br>
+                                arrange a smile for you.</p>
+                        </div>
+                    </div>
+                    <div class="blogImages d-flex justify-content-around  col-lg-12">
+                        <div class="blogImage col-lg-4">
+                            <div class="image">
+                                <div class="date"><span> 27.04.2018</span></div>
+                                <img src="../assets/images/blogimage1.jpg" alt="">
+
+                            </div>
+                            <div class="imageName">Flower Power</div>
+                            <div class="imageDesc">
+                                <p>Class aptent taciti sociosqu ad litora torquent per <br> conubia nostra, per</p>
+                            </div>
+
+                        </div>
+                        <div class="blogImage col-lg-4">
+                            <div class="image">
+                                <div class="date"><span>03.05.2018</span> </div> <img src="../assets/images/blog2.jpg"
+                                    alt="">
+
+                            </div>
+                            <div class="imageName">Local Florists</div>
+                            <div class="imageDesc">
+                                <p>Class aptent taciti sociosqu ad litora torquent per <br> conubia nostra, per</p>
+                            </div>
+
+                        </div>
+                        <div class="blogImage col-lg-4">
+                            <div class="image">
+                                <div class="date"><span>03.05.2018</span></div> <img
+                                    src="../assets/images/blog-feature-img-4.jpg" alt="">
+
+                            </div>
+                            <div class="imageName">Flower Beauty </div>
+                            <div class="imageDesc">
+                                <p>Class aptent taciti sociosqu ad litora torquent per <br> conubia nostra, per</p>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="slider">
+            <div class="owl-carousel owl-theme">
+                <div class="item">
+                    <div class="container">
+                        <div class="row">
+                            <div class="sliderInfosImage d-flex justify-content-center ">
+                                <div class="innerSliderInfosImage">
+                                    <div class="sliderImage d-flex justify-content-center">
+                                        <img style="width: 22%;" src="../assets/images/testimonial-img-1.png" alt="">
+                                    </div>
+                                    <div class="sliderinfos ">
+                                        <div style="color: grey; font-size: 20px;" class="desc text-center mt-1">
+                                            Lorem ipsum dolor sit amet, consectetuer adipiscing elit. <br> Aenean
+                                            commodo ligula eget.
+                                        </div>
+                                        <div class="sliderName text-center mt-3">
+                                            <h5>Jasmine White</h5>
+                                        </div>
+                                        <div class="sliderProfession text-center">
+                                            <p>Florist</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="container">
+                        <div class="row">
+                            <div class="sliderInfosImage d-flex justify-content-center ">
+                                <div class="innerSliderInfosImage">
+                                    <div class="sliderImage d-flex justify-content-center">
+                                        <img style="width: 22%;" src="../assets/images/sliderImg2.png" alt="">
+                                    </div>
+                                    <div class="sliderinfos ">
+                                        <div style="color: grey; font-size: 20px;" class="desc text-center mt-1">
+                                            Lorem ipsum dolor sit amet, consectetuer adipiscing elit. <br> Aenean
+                                            commodo ligula eget.
+                                        </div>
+                                        <div class="sliderName text-center mt-3">
+                                            <h5>Jasmine White</h5>
+                                        </div>
+                                        <div class="sliderProfession text-center">
+                                            <p>Florist</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </section>
+    </main>
+    <footer>
+        <div class="footer">
+            <div class="container">
+                <div class="row">
+                    <div class="topFooter d-flex justify-content-between col-lg-12 col-md-6 col-sm-12">
+                        <ul class="col-lg-3 col-md-6 col-sm-12">
+                            <h5>CUSTOMER SERVICE</h5>
+                            <li><a href="">Help & Contact Us</a></li>
+                            <li><a href="">Returns & Refunds</a></li>
+                            <li><a href="">Online Stores</a></li>
+                            <li><a href="">Terms & Conditions</a></li>
+                        </ul>
+                        <ul class="col-lg-3 col-md-6 col-sm-12">
+                            <h5>COMPANY</h5>
+                            <li><a href="">About Us</a></li>
+                            <li><a href="">Blog</a></li>
+                            <li><a href="">Order Tracking</a></li>
+                            <li><a href="">FAQ Page</a></li>
+                            <li><a href="">Contact Us</a></li>
+                            <li><a href="">Login</a></li>
+                        </ul>
+                        <ul class="col-lg-3 col-md-6 col-sm-12">
+                            <h5>SOCIAL MEDIA</h5>
+                            <li><a href="">Twitter</a></li>
+                            <li><a href="">Instagram</a></li>
+                            <li><a href="">Tumblr</a></li>
+                            <li><a href="">Pinterest</a></li>
+                        </ul>
+                        <ul class="col-lg-3 col-md-6 col-sm-12">
+                            <h5>ARCHIVE</h5>
+                            <li><a href="">Designer Shoes</a></li>
+                            <li><a href="">Gallery</a></li>
+                            <li><a href="">Pricing</a></li>
+                            <li><a href="">Feature Index</a></li>
+                            <li><a href="">Login</a></li>
+                            <li><a href="">Help & Support</a></li>
+                        </ul>
+                    </div>
+                    <hr style="margin-top: 10px; background-color: grey;">
+                    <div class="bottomFooter d-flex justify-content-between">
+                        <div class="rights">
+                            <span>© 2018 Qode Interactive, All Rights Reserved</span>
+                        </div>
+                        <div class="payments">
+                            <div class="footerImage"><img src="../assets/images/footerPayment.png" alt=""></div>
+                        </div>
+                        <div class="socialMedia">
+                            <span><a href="">FACEBOOK</a></span> <span><a href="">INSTAGRAM</a></span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <div class="d-none goUp">
+        <i class="fas fa-chevron-up icon icon1"></i>
+        <i class="fas fa-chevron-up icon icon2"></i>
+    </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
+        integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="../assets/Js/owl.carousel.min.js"></script>
+    <script src="../assets/Js/parallax.min.js"></script>
+    <script src="../assets/Js/home.js"></script>
+    <script src="../assets/Js/main.js"></script>
     </main>
     
    
