--- a/FiorellaProject/Html/home.html
+++ b/FiorellaProject/Html/home.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
         integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <link rel="stylesheet" href="../assets/css/owl.carousel.min.css">
+    <link rel="stylesheet" href="../assets/css/owl.theme.default.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="../assets/css/style.css">
@@ -222,168 +224,6 @@
                     </div>
                     <div class="menu-icon col-sm-3 col-3">
                         <i class="fas fa-bars"></i>
-                    </div>
-                    <div class="menu animate__animated">
-                        <div class="closeX  text-end">
-                            <i class="fas fa-times"></i>
-                        </div>
-                        <div class="menu-nav-links">
-                            <ul id="menuNavLinksUl" style="list-style: none;">
-                                <li class="menuHomeLi">
-                                    <a href="#">HOME</a>
-                                    <span><i class="fas fa-chevron-right"></i></span>
-                                    <div class="menuHome">
-                                        <ul style="list-style: none;">
-                                            <li><a href="">Main Home</a></li>
-                                            <li><a href="">Grid Home</a></li>
-                                            <li><a href="">Flower Shop</a></li>
-                                            <li><a href="">Animated Slider</a></li>
-                                            <li><a href="">Metro Showcase</a></li>
-                                            <li><a href="">Carosuel Showcase</a></li>
-                                            <li><a href="">Landing</a></li>
-                                        </ul>
-                                    </div>
-                                </li>
-                                <li class="menuPagesLi"><a href="#">PAGES</a>
-                                    <span><i class="fas fa-chevron-right"></i></span>
-                                    <div class="menuPages">
-                                        <ul style="list-style: none;">
-                                            <li><a href="">About Us</a></li>
-                                            <li><a href="">FAQ page</a></li>
-                                            <li><a href="">Contact Us</a></li>
-                                        </ul>
-                                    </div>
-                                </li>
-                                <li class="menuShopLi"><a href="#">SHOP</a>
-                                    <span><i class="fas fa-chevron-right"></i></span>
-                                    <div class="menuShop">
-                                        <h4 class="pth4">Product types <span><i class="fas fa-chevron-right"></i></span>
-                                        </h4>
-
-                                        <ul class="pt">
-                                            <li><a href="">Standart Product</a></li>
-                                            <li><a href="">Grouped Product</a></li>
-                                            <li><a href="">Variable Product</a></li>
-                                            <li><a href="">Virtual Product</a></li>
-                                            <li><a href="">External Product</a></li>
-                                            <li><a href="">Downloadable Product</a></li>
-                                            <li><a href="">On Sale Product</a></li>
-                                            <li><a href="">Out of Stock Product</a></li>
-                                            <li><a href="">New Product</a></li>
-                                        </ul>
-                                        <h4 class="sph4">Shop Pages <span><i class="fas fa-chevron-right"></i></span>
-                                        </h4>
-                                        <ul class="sp">
-                                            <li><a href="">My Account</a></li>
-                                            <li><a href="">Cart</a></li>
-                                            <li><a href="">Checkout</a></li>
-                                            <li><a href="">Orders</a></li>
-                                            <li><a href="">Downloads</a></li>
-                                        </ul>
-                                        <h4 class="sth4"> Shop Types <span><i class="fas fa-chevron-right"></i></span>
-                                        </h4>
-                                        <ul class="st">
-                                            <li><a href="">Product List</a></li>
-                                            <li><a href="">Without Sidebar</a></li>
-                                            <li><a href="">With Category Filter</a></li>
-                                            <li><a href="">With Ordering Filter </a></li>
-                                            <li><a href="">Shop Carousel</a></li>
-                                            <li><a href="">Product Categories</a></li>
-                                            <li><a href="">Single Category</a></li>
-                                        </ul>
-                                        <h4 class="slh4">Shop Layouts <span><i class="fas fa-chevron-right"></i></span>
-                                        </h4>
-                                        <ul class="sl">
-                                            <li><a href="">Two Columns Grid</a></li>
-                                            <li><a href="">Three Columns Grid</a></li>
-                                            <li><a href="">Four Columns Grid</a></li>
-                                            <li><a href="">Four Columns Wide</a></li>
-                                            <li><a href="">Five Columns Wide</a></li>
-                                            <li><a href="">Four Columns Grid</a></li>
-                                        </ul>
-                                    </div>
-                                </li>
-                                <li class="menuPortfolioLi"><a href="#">PORTFOLIO</a>
-                                    <span><i class="fas fa-chevron-right"></i></span>
-                                    <div class="menuPortfolio">
-                                        <ul>
-                                            <li><a href="">Standart</a></li>
-                                            <li><a href="">Gallery</a></li>
-                                            <li><a href="">Masonry</a></li>
-                                            <li class="menuPortfolioLayoutsLi" style="font-size: 9px;"><a
-                                                    href="#">Portfolio
-                                                    Layouts</a>
-                                                <i class="fas fa-chevron-right"></i>
-                                                <div class="menuPortfolio-inner-layouts">
-                                                    <ul>
-                                                        <li><a href="">Two Columns</a></li>
-                                                        <li><a href="">Three Columns</a></li>
-                                                        <li><a href="">Four Columns</a></li>
-                                                        <li><a href="">Four Columns Wide</a></li>
-                                                        <li><a href="">Five Columns Wide</a></li>
-                                                    </ul>
-                                                </div>
-                                            </li>
-                                            <li class="menuPortfolioSingleLi"><a href="#">Portfolio Single</a>
-                                                <i style="font-size:9px ;" class="fas fa-chevron-right"></i>
-                                                <div class="menuPortfolio-inner-single">
-                                                    <ul>
-                                                        <li><a href="">Small Images</a></li>
-                                                        <li><a href="">Small Slider</a></li>
-                                                        <li><a href="">Big Images</a></li>
-                                                        <li><a href="">Big Slider</a></li>
-                                                        <li><a href="">Gallery</a></li>
-                                                    </ul>
-                                                </div>
-                                            </li>
-                                        </ul>
-                                    </div>
-                                </li>
-                                <li class="menuBlogLi"><a href="#">BLOG</a>
-                                    <span><i style="font-size: 9px;" class="fas fa-chevron-right"></i></span>
-                                    <div class="menuBlog">
-                                        <ul>
-                                            <li><a href="">Masonry</a></li>
-                                            <li><a href="">Standart</a></li>
-                                            <li class="menuBlogPostLi"><a href="#">Post Types</a>
-                                                <i class="fas fa-chevron-right" style="font-size: 9px;"></i>
-                                                <div class="menuBlog-inner-post">
-                                                    <ul class="menuBlogUl">
-                                                        <li><a href="">Standart</a></li>
-                                                        <li><a href="">Gallery</a></li>
-                                                        <li><a href="">Link</a></li>
-                                                        <li><a href="">Quote</a></li>
-                                                        <li><a href="">Audio</a></li>
-                                                        <li><a href="">Video</a></li>
-                                                    </ul>
-                                                </div>
-                                            </li>
-                                        </ul>
-                                    </div>
-                                </li>
-                                <li class="menuElementsLi"><a href="#">ELEMENTS</a>
-                                    <span><i style="font-size: 9px;" class="fas fa-chevron-right"></i></span>
-                                    <div class="menuElements">
-                                        <ul>
-                                            <li class="d-flex justify-content-between"> <a href="">Classic</a>
-                                                <div class="elements-inner-classic">
-                                                </div>
-                                            </li>
-                                            <li class="d-flex justify-content-between"><a href="">Infographic</a>
-                                                <div class="elements-inner-info"></div>
-                                            </li>
-                                            <li class="d-flex justify-content-between">
-                                                <a href="">Interactive</a>
-                                                <div class="elements-inner-interactive"></div>
-                                            </li>
-                                            <li class="d-flex justify-content-between"> <a href="">Typography</a>
-                                                <div class="elements-inner-typo"></div>
-                                            </li>
-                                        </ul>
-                                    </div>
-                                </li>
-                            </ul>
-                        </div>
                     </div>
                 </div>
             </div>
@@ -765,7 +605,6 @@
                         </div>
                     </div>
                 </div>
-
             </div>
         </section>
     </main>
@@ -834,10 +673,7 @@
     <script src="../assets/Js/owl.carousel.min.js"></script>
     <script src="../assets/Js/parallax.min.js"></script>
     <script src="../assets/Js/home.js"></script>
-    <script src="../assets/Js/main.js"></script>
     </main>
-    
-   
 </body>
 
 </html>
