--- a/FiorellaProject/Html/cart.html
+++ b/FiorellaProject/Html/cart.html
@@ -59,7 +59,7 @@
                                     <div class="shop">
                                         <ul>
                                             <h4>Product types</h4>
-                                            <li><a href="">Standart Product</a></li>
+                                            <li><a  href="../Html/productList.html">Standart Product</a></li>
                                             <li><a href="">Grouped Product</a></li>
                                             <li><a href="">Variable Product</a></li>
                                             <li><a href="">Virtual Product</a></li>
