--- a/FiorellaProject/Html/productList.html
+++ b/FiorellaProject/Html/productList.html
@@ -58,7 +58,7 @@
                                     <div class="shop">
                                         <ul>
                                             <h4>Product types</h4>
-                                            <li><a href="">Standart Product</a></li>
+                                            <li><a href="../Html/productList.html">Standart Product</a></li>
                                             <li><a href="">Grouped Product</a></li>
                                             <li><a href="">Variable Product</a></li>
                                             <li><a href="">Virtual Product</a></li>
@@ -71,7 +71,7 @@
                                         <ul>
                                             <h4>Shop Pages</h4>
                                             <li><a href="">My Account</a></li>
-                                            <li><a href="">Cart</a></li>
+                                            <li><a href="../Html/cart.html">Cart</a></li>
                                             <li><a href="">Checkout</a></li>
                                             <li><a href="">Orders</a></li>
                                             <li><a href="">Downloads</a></li>
